[gd_scene load_steps=7 format=3 uid="uid://vtmapdr3lve8"]

[ext_resource type="Theme" uid="uid://rk6qj71lika4" path="res://assets/theme_hud.tres" id="1_ve0d0"]
[ext_resource type="Script" uid="uid://dsetgl7bk34m2" path="res://scripts/postgame_score_card.gd" id="2_ixdsg"]
[ext_resource type="Texture2D" uid="uid://drbu2abtwev4p" path="res://assets/flag_valid.png" id="3_rcmxo"]
[ext_resource type="Texture2D" uid="uid://brcjt0l6wst0e" path="res://assets/flag_invalid.png" id="4_74v0v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88dsx"]
bg_color = Color(0.615076, 0.612658, 0.443193, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8k2w"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PostgameScoreCard" type="PanelContainer"]
offset_right = 116.0
offset_bottom = 132.0
size_flags_horizontal = 3
theme = ExtResource("1_ve0d0")
theme_override_styles/panel = SubResource("StyleBoxFlat_88dsx")
script = ExtResource("2_ixdsg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Player name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n8k2w")

[node name="Cont1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="RevealedCells" type="Label" parent="MarginContainer/VBoxContainer/Cont1"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Cells: +"
horizontal_alignment = 1

[node name="RevealedCellsScore" type="Label" parent="MarginContainer/VBoxContainer/Cont1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "0"
horizontal_alignment = 1

[node name="Cont2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Flags" type="Label" parent="MarginContainer/VBoxContainer/Cont2"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Flags: +"
horizontal_alignment = 1

[node name="ValidFlagScore" type="Label" parent="MarginContainer/VBoxContainer/Cont2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "20"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Cont2"]
layout_mode = 2
texture = ExtResource("3_rcmxo")

[node name="ValidBonus" type="Label" parent="MarginContainer/VBoxContainer/Cont2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "x 5"

[node name="Cont3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Flags" type="Label" parent="MarginContainer/VBoxContainer/Cont3"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "       -"
horizontal_alignment = 1

[node name="InvalidFlagScore" type="Label" parent="MarginContainer/VBoxContainer/Cont3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "20"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/Cont3"]
layout_mode = 2
texture = ExtResource("4_74v0v")

[node name="InvalidMalus" type="Label" parent="MarginContainer/VBoxContainer/Cont3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "x -8"

[node name="Cont4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TotalLabel" type="Label" parent="MarginContainer/VBoxContainer/Cont4"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Total:"
horizontal_alignment = 1

[node name="TotalScore" type="Label" parent="MarginContainer/VBoxContainer/Cont4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "1500"
horizontal_alignment = 1
